# PicoGine

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PicoGine.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CMake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PicoGine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
CMake/Engine/: Engine.vcxproj  Engine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PICOGINEEXCEPTION.CPP  PicoGineException.h
CMake/Engine/Shaders/: ColorPS.cso
CMake/Game/: Game.vcxproj  Game.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
Engine/: BaseComponent.cpp  BaseComponent.h  BaseMaterial.cpp  BaseMaterial.h  CMakeLists.txt  CMakeLists.txt.bak  CameraComponent.cpp  CameraComponent.h  CleanedWindows.h  ColorMaterial.cpp  ColorMaterial.h  ColorPS.hlsl  ColorVS.hlsl  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EnginePCH.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  GameSettings.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  InputManager.cpp  InputManager.h  MaterialManager.h  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  PicoGineException.cpp  PicoGineException.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Singleton.h  Test.cpp  Test.h  TestPS.hlsl  (+12 more)
Game/: CMakeLists.txt  CMakeLists.txt.bak  Game.vcxproj  Game.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  main.cpp
